# ms_cntk_cray_install

./: CMakeLists.txt  OpenMPIInstall.cmake  PythonInstall.cmake  README.md
install_wrappers/: BuildCNTK.ksh.in  BuildCNTK.sh.in
